Update code with react and styles

--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
-<!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title>Spotify Client DOS</title>
+	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
-<div id="client"><a href="/login">Click to login</a></div>
+<div id="client"></div>
+<script src="client.js"></script>
 </body>
 </html>
